# Uruframe-ERP

./: .gitignore  App.tsx  README.md  RUN_PRODUCTION_LOCAL.md  index.html  install-startup.bat  metadata.json  package-lock.json  package.json  start.bat  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
backend/: .env  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  database.py  main.py  registry.py  seed.py  serialization.py
backend/app/models/: __init__.py  orm.py  schemas.py
backend/app/routers/: auth.py  resources.py
backend/app/services/: __init__.py  resource.py
backend/data/: structura.db-shm  structura.db-wal
backend/migrations/: README  env.py
backend/migrations/versions/: 001_initial_tables.py  002_integrity_constraints.py  003_nullable_project_client.py
components/: MachineCard.tsx
e2e/: auth.spec.ts  operator-flow.spec.ts
plans/: 00-overview.md  01-foundation-shared-layer.md  02-entities-layer.md  03-features-layer.md  04-routing-tanstack.md  05-widgets-layer.md  06-app-shell.md  07-testing-strategy.md  08-backend-migration-path.md  09-ui-design-system.md  10-performance-optimization.md  11-internationalization.md  12-error-handling.md  13-accessibility.md
services/: geminiService.ts
src/app/: App.tsx  main.tsx
src/app/providers/: StoreProvider.tsx  index.tsx
src/app/routes/: authenticated.tsx  login.tsx  (+12 more)
src/test/: setup.ts  utils.tsx
views/: ClientsView.tsx  DashboardView.tsx  InventoryView.tsx  LoginView.tsx  OperatorTerminal.tsx  OrdersView.tsx  ProjectsView.tsx  SettingsView.tsx
(+168 files in other folders)
